@@ -1,0 +1,7 @@
+class Main {
+	static var field = return 3;
+
+	static function main() {
+		var x:String = field;
+	}
+}
