@@ -1,0 +1,2 @@
+Main.hx:2: characters 21-29 : Return outside function
+Main.hx:5: characters 3-24 : Int should be String
