@@ -1,5 +1,11 @@
 2020-XX-XX 4.1.3
 
+	General improvements:
+
+	all : added an error on `return` outside of a function (#9659)
+	php : support @:native("") for extern classes (#6448)
+	python : support @:native("") for extern classes (#6448)
+
 	Bugfixes:
 
 	all : fixed compilation server bug caused by removing `inline` from a method (#9690)
@@ -8,9 +14,7 @@
 	flash : fixed var shadowing issue for variables captured in a closure inside of a loop (#9624)
 	flash : fixed `VerifyError` exception when `Void` end up as an argument type after inlining (#9678)
 	php : fixed runtime error "cannot use temporary expression in write context" for call arguments passed by reference
-	php : support @:native("") for extern classes (#6448)
 	cs : fixed `cs.Lib.rethrow` (#9738)
-	python : support @:native("") for extern classes (#6448)
 	nullsafety: fixed `@:nullSafety(Off)` in closures inside of constructors (#9643)
 	nullsafety: fixed "Type not found NullSafetyMode_Impl_" (#9483)
 
